Made final updates to home page; generalized new footer style across other pages

--- a/ccn.html
+++ b/ccn.html
@@ -104,20 +104,15 @@
         </div>
     </section>
 
-    <footer class="portfolio-footer" id="about">
-        <section class="portfolio-footer-about">
-            <h3 class="portfolio-footer-about-title">ABOUT ANDREA</h3>
-            <p class="portfolio-footer-about-blurb">I am a UX/UI Designer in Cambridge, MA. Graffiti alley, picture above, is a beloved place of mine in Central Square. It is always changing, just like design.</p>
-            <p class="portfolio-footer-about-blurb">I enjoy solving complex design problems and thrive on teamwork. I have experience with education and healthcare startups and have also previously worked in healthcare. My diverse work history gives me a unique perspective on the importance of collaboration and empathy. <a class="portfolio-footer-download-cv" href="https://github.com/andrealeigh/portfolio/raw/master/UX-UI%20Designer%20Resume.pdf">Download my resume</a></p>
-        </section>
-        <section class="portfolio-footer-contact">
+    <footer class="portfolio-footer" id="contact">
+            <h3 class="portfolio-footer-about-title">CONTACT ANDREA</h3>
             <div class="portfolio-footer-social-media">
                 <a class="portfolio-footer-social-media-icon" href="https://www.linkedin.com/in/andrea-leigh-williamson" target="_blank"><img src="images/linkedin.svg" alt="linkedin"></a>
                 <a class="portfolio-footer-social-media-icon" href="https://dribbble.com/AndreaLeigh111" target="_blank"><img src="images/dribbble.svg" alt="dribbble"></a>
                 <a class="portfolio-footer-social-media-icon" href="https://github.com/andrealeigh" target="_blank"><img src="images/github.svg" alt="github"></a>
+                <a class="portfolio-footer-social-media-icon" href="mailto:leigh.andrea@gmail.com" target="_blank"><img src="images/email.svg" alt="email"></a>
             </div>
-            <h5 class="portfolio-footer-email">leigh.andrea@gmail.com</h5>
-        </section>
+            <a class="portfolio-about-resume-link" href="#">Download Resume</a>
     </footer>
 
     <script src="js/smooth-scroll.min.js"></script>
