--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="portfolio-nav-links">
             <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="#about">ABOUT</a>
             <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="portfolio.html">PORTFOLIO</a>
-            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="process.html">DESIGN PHILOSOPHY</a>
+            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="process.html">DESIGN PROCESS</a>
             <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="#contact">CONTACT</a>
         </div>
     </nav>
@@ -29,35 +29,34 @@
     </section>
 
     <section class="portfolio-portfolio">
-        <div class="portfolio-portfolio-row">
-                <div class="portfolio-portfolio-column">
+        <div class="portfolio-content-row">
+                <div class="portfolio-content-column">
                 <button class="portfolio-icon"><a href="portfolio.html" rel="portfolio-design-process">
-                    <img class="portfolio-icon-image" src="images/portfolio-page-icon.png" alt="portfolio page link" />
+                    <img class="portfolio-icon-image" src="images/ps-portfolio.png" alt="portfolio page link" />
                 </a></button>
             </div>
-            <div class="portfolio-portfolio-column">
+            <div class="portfolio-content-column">
                 <h2 class="portfolio-portfolio-header">Portfolio</h2>
-                <p class="portfolio-portfolio-blurb">View selected pieces from my experience at education and healthcare startups as well as open source projects:</p>
-                <ul class="portfolio-portfolio-list">
-                    <li class="portfolio-portfolio-list-item">B2C education product design</li>
-                    <li class="portfolio-portfolio-list-item">B2B healthcare clinical trial product design</li>
-                    <li class="portfolio-portfolio-list-item">Marketing websites and related deliverables</li>
-                    <li class="portfolio-portfolio-list-item">Graphic design: Logos &amp; icons</li>
+                <p class="portfolio-content-blurb">View selected pieces from my work with education startups, healthcare startups, and open source projects by clicking the left image:</p>
+                <ul class="portfolio-content-list">
+                    <li class="portfolio-content-list-item">B2C education product design</li>
+                    <li class="portfolio-content-list-item">B2B healthcare clinical trial product design</li>
+                    <li class="portfolio-content-list-item">Marketing websites and related deliverables</li>
+                    <li class="portfolio-content-list-item">Graphic design: Logos &amp; icons</li>
                 </ul>
             </div>
         </div>
     </section>
 
     <section class="portfolio-philosophy">
-        <div class="portfolio-philosophy-row">
-            <div class="portfolio-philsophy-column">
-                <h2 class="portfolio-philosophy-header">Design Philosophy</h2>
-                <p class="portfolio-philosophy-blurb"><span class="portfolio-philosophy-blurb-emphasis">I strive to create design work based on data,</span> not feelings. Research-based design principles make the foundation on which I shape my designs. I look to qualititave data gathered from user research and testing to inform design decisions. I rely on team members with domain expertise for insight into their field. When possible, I use quantitative data from user tracking, analytics, and a/b testing to analyze existing designs.</p>
-                <p class="portfolio-philosophy-blurb">Prior to my design career, I worked as a Speech-Language Pathologist in healthcare for almost three years. I know the value of collaboration and empathy, and I've had years of experience learning the nuances of effective communication.</p>
+        <div class="portfolio-content-row">
+            <div class="portfolio-content-column">
+                <h2 class="portfolio-philosophy-header">Design Process</h2>
+                <p class="portfolio-content-blurb">I strive to work collaboratively and with low ego. I rely on research-based design principles, qualitative data from users, and quantitative data from analytics/testing to inform design decisions. Read more about my design process by clicking the right image.</p>
             </div>
-            <div class="portfolio-philsophy-column">
+            <div class="portfolio-content-column">
                 <button class="portfolio-icon process-icon"><a href="process.html#design-process-body" rel="portfolio-design-process">
-                    <img class="portfolio-icon-image" src="images/process-icon.png" alt="design process link" />
+                    <img class="portfolio-icon-image" src="images/ps-design.png" alt="design process link" />
                 </a></button>
             </div>
         </div>
@@ -250,12 +249,13 @@
 
     <footer class="portfolio-footer" id="contact">
             <h3 class="portfolio-footer-about-title">CONTACT ANDREA</h3>
-            <h5 class="portfolio-footer-email">Email me at leigh.andrea@gmail.com. <a class="portfolio-about-resume-link" href="#">Download Resume</a></h5>
             <div class="portfolio-footer-social-media">
                 <a class="portfolio-footer-social-media-icon" href="https://www.linkedin.com/in/andrea-leigh-williamson" target="_blank"><img src="images/linkedin.svg" alt="linkedin"></a>
                 <a class="portfolio-footer-social-media-icon" href="https://dribbble.com/AndreaLeigh111" target="_blank"><img src="images/dribbble.svg" alt="dribbble"></a>
                 <a class="portfolio-footer-social-media-icon" href="https://github.com/andrealeigh" target="_blank"><img src="images/github.svg" alt="github"></a>
+                <a class="portfolio-footer-social-media-icon" href="mailto:leigh.andrea@gmail.com" target="_blank"><img src="images/email.svg" alt="email"></a>
             </div>
+            <a class="portfolio-about-resume-link" href="#">Download Resume</a>
     </footer>
 
     <script src="js/smooth-scroll.min.js"></script>
