--- a/portfolio.html
+++ b/portfolio.html
@@ -140,12 +140,13 @@
 
     <footer class="portfolio-footer" id="contact">
             <h3 class="portfolio-footer-about-title">CONTACT ANDREA</h3>
-            <h5 class="portfolio-footer-email">Email me at leigh.andrea@gmail.com. <a class="portfolio-about-resume-link" href="#">Download Resume</a></h5>
             <div class="portfolio-footer-social-media">
                 <a class="portfolio-footer-social-media-icon" href="https://www.linkedin.com/in/andrea-leigh-williamson" target="_blank"><img src="images/linkedin.svg" alt="linkedin"></a>
                 <a class="portfolio-footer-social-media-icon" href="https://dribbble.com/AndreaLeigh111" target="_blank"><img src="images/dribbble.svg" alt="dribbble"></a>
                 <a class="portfolio-footer-social-media-icon" href="https://github.com/andrealeigh" target="_blank"><img src="images/github.svg" alt="github"></a>
+                <a class="portfolio-footer-social-media-icon" href="mailto:leigh.andrea@gmail.com" target="_blank"><img src="images/email.svg" alt="email"></a>
             </div>
+            <a class="portfolio-about-resume-link" href="#">Download Resume</a>
     </footer>
 
     <script src="js/smooth-scroll.min.js"></script>
