More changes to my portfolio intro page

--- a/ccn.html
+++ b/ccn.html
@@ -13,13 +13,13 @@
 
 <body class="portfolio">
 
-    <nav class="portfolio-nav home-nav">
-        <h1 class="portfolio-nav-name">Andrea Leigh Williamson</h1>
+    <nav class="portfolio-nav not-home-nav">
+        <h1 class="portfolio-nav-name not-home-nav-name">Andrea Leigh Williamson</h1>
         <div class="portfolio-nav-links">
-            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="#about">ABOUT</a>
-            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="#portfolio">PORTFOLIO</a>
-            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="#portfolio">DESIGN PHILOSOPHY</a>
-            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="#about">CONTACT</a>
+            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link not-home-nav-link" href="index.html">HOME</a>
+            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link not-home-nav-link" href="portfolio.html">PORTFOLIO</a>
+            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link not-home-nav-link" href="process.html">DESIGN PROCESS</a>
+            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link not-home-nav-link" href="#contact">CONTACT</a>
         </div>
     </nav>
 
