--- a/portfolio.html
+++ b/portfolio.html
@@ -13,19 +13,18 @@
 
 <body class="portfolio">
 
-    <nav class="portfolio-nav home-nav">
-        <h1 class="portfolio-nav-name">Andrea Leigh Williamson</h1>
+    <nav class="portfolio-nav not-home-nav">
+        <h1 class="portfolio-nav-name not-home-nav-name">Andrea Leigh Williamson</h1>
         <div class="portfolio-nav-links">
-            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="index.html">ABOUT</a>
-            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="#portfolio">PORTFOLIO</a>
-            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="process.html">DESIGN PHILOSOPHY</a>
-            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="#contact">CONTACT</a>
+            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link not-home-nav-link" href="index.html">HOME</a>
+            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link not-home-nav-link" href="#portfolio">PORTFOLIO</a>
+            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link not-home-nav-link" href="process.html">DESIGN PROCESS</a>
+            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link not-home-nav-link" href="#contact">CONTACT</a>
         </div>
     </nav>
 
     <section id="portfolio" class="portfolio-about">
         <p class="portfolio-about-blurb"><span class="portfolio-about-blurb-emphasis">My portfolio</span> contains selected pieces from my design experience.</p>
-        <p class="portfolio-about-blurb">Click on the images to explore each piece.</p>
     </section>
 
     <section class="portfolio-trinetx">
@@ -120,7 +119,7 @@
         <div class="portfolio-piece-row">
             <div class="portfolio-piece-column">
                 <button class="portfolio-piece-icon"><a href="#">
-                    <img class="portfolio-piece-icon-image" src="images/trinetx-logo.png" alt="trinetx logo" />
+                    <img class="portfolio-piece-icon-image" src="images/ps-portfolio-icons.png" alt="portfolio icons" />
                 </a></button>
             </div>
             <div class="portfolio-piece-column">
