--- a/process.html
+++ b/process.html
@@ -15,14 +15,13 @@
 
 <body class="portfolio">
 
-    <nav class="portfolio-nav">
-        <section class="portfolio-nav-left-side">
-            <a href="index.html" rel="home page"><h1 class="portfolio-nav-name">Andrea Leigh Williamson</h1></a>
-            <img class="portfolio-nav-title" src="images/about-me.gif" alt="about me" />
-        </section>
+    <nav class="portfolio-nav not-home-nav">
+        <h1 class="portfolio-nav-name not-home-nav-name">Andrea Leigh Williamson</h1>
         <div class="portfolio-nav-links">
-            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="index.html#portfolio">PORTFOLIO</a>
-            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="index.html#about">ABOUT/CONTACT</a>
+            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link not-home-nav-link" href="index.html">HOME</a>
+            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link not-home-nav-link" href="portfolio.html">PORTFOLIO</a>
+            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link not-home-nav-link" href="process.html">DESIGN PROCESS</a>
+            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link not-home-nav-link" href="#contact">CONTACT</a>
         </div>
     </nav>
 
