Updated copy on portfolio page, made changes to nav on portfolio & home page

--- a/portfolio.html
+++ b/portfolio.html
@@ -13,21 +13,17 @@
 
 <body class="portfolio">
 
-    <nav class="portfolio-nav not-home-nav">
-        <h1 class="portfolio-nav-name not-home-nav-name">Andrea Leigh Williamson</h1>
+    <nav class="portfolio-nav">
+        <h1 class="portfolio-nav-name">Andrea Leigh Williamson</h1>
         <div class="portfolio-nav-links">
-            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link not-home-nav-link" href="index.html">HOME</a>
-            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link not-home-nav-link" href="#portfolio">PORTFOLIO</a>
-            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link not-home-nav-link" href="process.html">DESIGN PROCESS</a>
-            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link not-home-nav-link" href="#contact">CONTACT</a>
+            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="index.html">ABOUT</a>
+            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link portfolio-page-link" href="#portfolio">PORTFOLIO</a>
+            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="process.html">DESIGN PROCESS</a>
+            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="#contact">CONTACT</a>
         </div>
     </nav>
 
-    <section id="portfolio" class="portfolio-about">
-        <p class="portfolio-about-blurb"><span class="portfolio-about-blurb-emphasis">My portfolio</span> contains selected pieces from my design experience.</p>
-    </section>
-
-    <section class="portfolio-trinetx">
+    <section id="portfolio" class="portfolio-trinetx">
         <div class="portfolio-piece-row">
             <div class="portfolio-piece-column">
                 <button class="portfolio-piece-icon"><a href="https://www.trinetx.com/" target=blank>
@@ -37,7 +33,7 @@
             <div class="portfolio-piece-column">
                 <h2 class="portfolio-piece-header">TriNetX, Inc: Clinical Trials Feasibility Product</h2>
                 <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Overview: </span>TriNetX is a B2B healthcare startup in Cambridge, MA. Their product is a web-based application for clinical trial feasibility.</p>
-                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Role: </span>I redesigned major features of their application within the context of a front-end overhaul project. <span class="portfolio-piece-blurb-emphasis-black">While I am not able to publicly share my design work,</span> I would be happy to present on the following in a controlled interview setting:</p>
+                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Role: </span>I redesigned major features of their application within the context of a complete front-end overhaul. <span class="portfolio-piece-blurb-emphasis-black">While I am not able to publicly share my design work,</span> I would be happy to present on the following in a controlled interview setting:</p>
                 <ul class="portfolio-piece-list">
                     <li class="portfolio-piece-list-item">Collaboration with Product, Development, and Clinical Operations</li>
                     <li class="portfolio-piece-list-item">Low fidelity mockups: Paper/pencil sketches; Balsamiq wireframes</li>
@@ -53,10 +49,11 @@
         <div class="portfolio-piece-row">
             <div class="portfolio-piece-column">
                 <h2 class="portfolio-piece-header">Testive, Inc: School Analytics Product</h2>
-                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Overview: </span>Testive is a B2C education startup in Boston, MA. Their products include multiple web-based applications that help students and mentors prepare for the SAT/ACT.</p>
-                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Role: </span>As the primary UX/UI designer at Testive, I led the design process for a product called School Analytics. The product&rsquo;s user base included school teachers and guidance counselors who wanted a way to track their students&rsquo; progress who used the Testive app for SAT/ACT prep:</p>
+                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Overview: </span>Testive is a B2C education startup in Boston, MA. Their products include several web-based applications that help students and their mentors prepare for the SAT/ACT.</p>
+                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Role: </span>As the primary UX/UI designer at Testive, I led the design process for a product called School Analytics. The product&rsquo;s user base included school teachers and guidance counselors who wanted a way to track their students&rsquo; progress on the Testive app:</p>
                 <ul class="portfolio-piece-list">
                     <li class="portfolio-piece-list-item">Ideation meetings with Head of Product, Head of Engineering, and Director of School Partnerships</li>
+                    <li class="portfolio-piece-list-item">User research with potential active users</li>
                     <li class="portfolio-piece-list-item">Low fidelity mockups: Paper/pencil wireframes, whiteboard sketches</li>
                     <li class="portfolio-piece-list-item">High fidelity mockups: Adobe Illustrator mockups</li>
                     <li class="portfolio-piece-list-item">HTML/SCSS development &amp; collaboration with development team</li>
@@ -64,7 +61,7 @@
             </div>
             <div class="portfolio-piece-column">
                 <div class="portfolio-piece-icon"><a href="https://github.com/andrealeigh/testive_portfolio/raw/master/high_fidelity_mockups/school_analytics.pdf">
-                    <img class="portfolio-piece-icon-image" src="images/school-analytics-icon.png" alt="school anayltics icon" />
+                    <img class="portfolio-piece-icon-image" src="images/school-analytics-icon.png" alt="school analytics icon" />
                 </a></div>
             </div>
         </div>
@@ -79,7 +76,7 @@
             </div>
             <div class="portfolio-piece-column">
                 <h2 class="portfolio-piece-header">Testive, Inc: Marketing Projects</h2>
-                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Overview: </span>Testive is a B2C education startup in Boston, MA. Their products include multiple web-based applications that help students and mentors prepare for the SAT/ACT.</p>
+                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Overview: </span>Testive is a B2C education startup in Boston, MA. Their products include several web-based applications that help students and their mentors prepare for the SAT/ACT.</p>
                 <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Role: </span>As the primary UX/UI designer at Testive, I collaborated closely with the Marketing &amp; Sales team on a number of projects. I led the design process on a variety of marketing deliverables that aimed to convert potential customers into sales for Testive&rsquo;s product:</p>
                 <ul class="portfolio-piece-list">
                     <li class="portfolio-piece-list-item">Wordpress marketing website: Designing &amp; coding new pages</li>
@@ -96,15 +93,15 @@
         <div class="portfolio-piece-row">
             <div class="portfolio-piece-column">
                 <h2 class="portfolio-piece-header">Open Source Project: Call Congress Now</h2>
-                <p class="portfolio-piece-blurb">Call Congress Now is a responsive web app I designed and co-developed. Its purpose is to encourage citizens to call their Representatives and Senators for issues they care about. The app provides calling information in a user-friendly way.</p>
-                <p class="portfolio-piece-blurb">Call Congress Now was a challenging but rewarding app to design and build. I have included key points in the design process:</p>
+                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Overview: </span>Call Congress Now is a responsive web app I designed and co-developed. Its purpose is to encourage citizens to call their Representatives and Senators for issues they care about. The app provides calling information in a user-friendly way.</p>
+                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Role: </span>I led the design process from start to end and also developed the HTML/SCSS. I have included key points in the design process:</p>
                 <ul class="portfolio-piece-list">
                     <li class="portfolio-piece-list-item">Discovery phase</li>
                     <li class="portfolio-piece-list-item">Defining the idea: User personas and storyboarding</li>
                     <li class="portfolio-piece-list-item">User research</li>
                     <li class="portfolio-piece-list-item">Design phase</li>
                     <li class="portfolio-piece-list-item">Development &amp; testing</li>
-                    <li class="portfolio-piece-list-item">Anaylsis &amp; next steps</li>
+                    <li class="portfolio-piece-list-item">Analysis &amp; next steps</li>
                 </ul>
             </div>
             <div class="portfolio-piece-column">
@@ -116,7 +113,7 @@
     </section>
 
     <section class="portfolio-icons">
-        <div class="portfolio-piece-row">
+        <div class="portfolio-piece-row portfolio-icons-row">
             <div class="portfolio-piece-column">
                 <button class="portfolio-piece-icon"><a href="#">
                     <img class="portfolio-piece-icon-image" src="images/ps-portfolio-icons.png" alt="portfolio icons" />
@@ -124,14 +121,13 @@
             </div>
             <div class="portfolio-piece-column">
                 <h2 class="portfolio-piece-header">Graphic Design: Logos and Icons</h2>
-                <p class="portfolio-piece-blurb">TriNetX is a healthcare startup. Their product is a B2B web-based application for clinical trial feasability. Their user base includes Pharma/CROs, HCOs, and in-house employees.</p>
-                <p class="portfolio-piece-blurb">I am not able to publicly share my design work, however I would be happy to present the following in a controlled interview setting:</p>
+                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Overview: </span>I have designed a variety of logos and icons for various web applications and projects. I used Adobe Illustrator to create vector logos and icons that were exported to SVG and/or PNG files, depending on the use case.</p>
+                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Role: </span>I completed graphic design work for the following companies &amp; projects:</p>
                 <ul class="portfolio-piece-list">
-                    <li class="portfolio-piece-list-item">Low fidelity mockups: Paper/pencil; Balsamiq</li>
-                    <li class="portfolio-piece-list-item">High fidelity mockups: Sketch and Adobe Illustrator</li>
-                    <li class="portfolio-piece-list-item">Clickable prototypes: Invision</li>
-                    <li class="portfolio-piece-list-item">User Research and Personas</li>
-                    <li class="portfolio-piece-list-item">User/Beta Testing</li>
+                    <li class="portfolio-piece-list-item">Testive, Inc: Marketing website</li>
+                    <li class="portfolio-piece-list-item">Snapability: Open source mobile app</li>
+                    <li class="portfolio-piece-list-item">Call Congress Now: Open source responsive web app</li>
+                    <li class="portfolio-piece-list-item">99 Designs: Logo design contest</li>
                 </ul>
             </div>
         </div>
