--- a/portfolio.html
+++ b/portfolio.html
@@ -105,7 +105,7 @@
                 </ul>
             </div>
             <div class="portfolio-piece-column">
-                <div class="portfolio-piece-icon"><a href="#">
+                <div class="portfolio-piece-icon"><a href="ccn.html">
                     <img class="portfolio-piece-icon-image" src="images/call-congress-icon.png" alt="call congress now" />
                 </a></div>
             </div>
