--- a/process.html
+++ b/process.html
@@ -5,7 +5,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css' />
-    <title>Andrea&rsquo;s Portfolio: Design Process</title>
+    <title>Design Process</title>
     <link href="css/reset.css" rel="stylesheet" />
     <link href="css/stylesheet.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="images/portfolio-icon.png" />
@@ -15,22 +15,22 @@
 
 <body class="portfolio">
 
-    <nav class="portfolio-nav not-home-nav">
-        <h1 class="portfolio-nav-name not-home-nav-name">Andrea Leigh Williamson</h1>
+    <nav class="portfolio-nav">
+        <h1 class="portfolio-nav-name">Andrea Leigh Williamson</h1>
         <div class="portfolio-nav-links">
-            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link not-home-nav-link" href="index.html">HOME</a>
-            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link not-home-nav-link" href="portfolio.html">PORTFOLIO</a>
-            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link not-home-nav-link" href="process.html">DESIGN PROCESS</a>
-            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link not-home-nav-link" href="#contact">CONTACT</a>
+            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="index.html">HOME</a>
+            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="portfolio.html">PORTFOLIO</a>
+            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link process-page-link" href="#process">DESIGN PROCESS</a>
+            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="#contact">CONTACT</a>
         </div>
     </nav>
 
-    <section class="portfolio-process-body" id="design-process-body">
-        <div class="portfolio-process-intro">
-            <h2 class="portfolio-process-title"><span class="portfolio-process-title-emphasis">DESIGN PROCESS:</span> Key Steps</h2>
-           <p class="portfolio-process-blurb-intro">The following describes key steps in my design process. It works best when I collaborate closely with others. Although the steps are presented here sequentially, I find that the design process is rarely linear. Sometimes elements in a step are skipped or iterated multiple times.</p>
-            <p class="portfolio-process-intro-emphasis">It all depends on the nature and goals of the project.</p>
-        </div>
+    <div class="portfolio-about" id="process">
+        <p class="portfolio-about-blurb"><span class="portfolio-about-blurb-emphasis">My design process</span> contains five key steps.</p>
+        <p class="portfolio-about-blurb">It works best when I collaborate closely with others. Although the steps are presented here sequentially, I find that the design process is rarely linear. It all depends on the nature and goals of the project.</p>
+    </div>
+
+    <section class="portfolio-process-body" >
         <div class="portfolio-process-row">
             <img class="portfolio-process-design-img" src="images/design-discover.png" alt="discovery" />
             <div class="portfolio-process-column">
