Finished marketing page

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         </div>
     </nav>
 
-    <section id="about" class="portfolio-about">
-    <p class="portfolio-about-blurb"><span class="portfolio-about-blurb-emphasis">I am a UX/UI designer</span> in the Greater Boston Area.</p>
-    <p class="portfolio-about-blurb">My work experience includes designing for B2B and B2C web products within education and healthcare startups.<br>I previously worked in healthcare and learned a lot about humans. <a class="portfolio-about-resume-link" href="#">Download Resume</a></p>
+    <section id="about" class="portfolio-intro">
+    <p class="portfolio-intro-blurb"><span class="portfolio-intro-blurb-emphasis">I am a UX/UI designer</span> in the Greater Boston Area.</p>
+    <p class="portfolio-intro-blurb">My work experience includes designing for B2B and B2C web products within education and healthcare startups.<br>I previously worked in healthcare and learned a lot about humans. <a class="portfolio-intro-resume-link" href="#">Download Resume</a></p>
     </section>
 
     <section class="portfolio-portfolio">
