--- a/portfolio.html
+++ b/portfolio.html
@@ -70,7 +70,7 @@
     <section class="portfolio-testive-projects">
         <div class="portfolio-piece-row">
             <div class="portfolio-piece-column">
-                <button class="portfolio-piece-icon"><a href="#">
+                <button class="portfolio-piece-icon"><a href="marketing.html">
                     <img class="portfolio-piece-icon-image" src="images/testive-marketing-icon.png" alt="testive marketing deliverables" />
                 </a></button>
             </div>
