--- a/process.html
+++ b/process.html
@@ -25,9 +25,9 @@
         </div>
     </nav>
 
-    <div class="portfolio-about" id="process">
-        <p class="portfolio-about-blurb"><span class="portfolio-about-blurb-emphasis">My design process</span> contains five key steps.</p>
-        <p class="portfolio-about-blurb">It works best when I collaborate closely with others. Although the steps are presented here sequentially, I find that the design process is rarely linear. It all depends on the nature and goals of the project.</p>
+    <div class="portfolio-intro" id="process">
+        <p class="portfolio-intro-blurb"><span class="portfolio-intro-blurb-emphasis">My design process</span> contains five key steps.</p>
+        <p class="portfolio-intro-blurb">It works best when I collaborate closely with others. Although the steps are presented here sequentially, I find that the design process is rarely linear. It all depends on the nature and goals of the project.</p>
     </div>
 
     <section class="portfolio-process-body" >
