--- a/marketing.html
+++ b/marketing.html
@@ -5,7 +5,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css' />
-    <title>Andrea&rsquo;s Portfolio</title>
+    <title>Portfolio: Testive marketing projects</title>
     <link href="css/reset.css" rel="stylesheet" />
     <link href="css/stylesheet.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="images/portfolio-icon.png" />
@@ -13,81 +13,74 @@
 
 <body class="portfolio">
 
-    <nav class="portfolio-nav not-home-nav">
-        <h1 class="portfolio-nav-name not-home-nav-name">Andrea Leigh Williamson</h1>
+    <nav class="portfolio-nav">
+        <h1 class="portfolio-nav-name">Andrea Leigh Williamson</h1>
         <div class="portfolio-nav-links">
-            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link not-home-nav-link" href="index.html">HOME</a>
-            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link not-home-nav-link" href="portfolio.html">PORTFOLIO</a>
-            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link not-home-nav-link" href="process.html">DESIGN PROCESS</a>
-            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link not-home-nav-link" href="#contact">CONTACT</a>
+            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="index.html">HOME</a>
+            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="portfolio.html">PORTFOLIO</a>
+            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="process.html">DESIGN PROCESS</a>
+            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="#contact">CONTACT</a>
         </div>
     </nav>
 
-    <section class="portfolio-about">
-        <p class="portfolio-about-blurb"><span class="portfolio-about-blurb-emphasis">Here is a collection of marketing deliverables</span> I created for Testive. Inc.</p>
+    <section class="portfolio-intro">
+        <p class="portfolio-intro-blurb"><span class="portfolio-intro-blurb-emphasis">Portfolio:</span> Marketing deliverables for Testive. Inc.</p>
     </section>
 
-    <section class="portfolio-trinetx">
+    <section class="portfolio-testive-home-page">
         <div class="portfolio-piece-row">
             <div class="portfolio-piece-column">
-                <button class="portfolio-piece-icon"><a href="https://www.trinetx.com/" target=blank>
-                    <img class="portfolio-piece-icon-image" src="images/trinetx-logo.svg" alt="trinetx logo" />
+                <button class="portfolio-piece-icon"><a href="https://andrealeigh.github.io/testive_portfolio/testive_home_page/index.html" target=blank>
+                    <img class="portfolio-piece-icon-image" src="images/ps-testive-home-page-icon.png" alt="testive home page icon" />
                 </a></button>
             </div>
             <div class="portfolio-piece-column">
-                <h2 class="portfolio-piece-header">TriNetX, Inc: Clinical Trials Feasibility Product</h2>
-                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Overview: </span>TriNetX is a B2B healthcare startup in Cambridge, MA. Their product is a web-based application for clinical trial feasibility.</p>
-                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Role: </span>I redesigned major features of their application within the context of a front-end overhaul project. <span class="portfolio-piece-blurb-emphasis-black">While I am not able to publicly share my design work,</span> I would be happy to present on the following in a controlled interview setting:</p>
+                <h2 class="portfolio-piece-header">Home Page Redesign</h2>
+                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Overview: </span>Testive is an education startup company. As the primary UX/UI designer, I collaborated closely with the Marketing &amp; Sales team on a number of projects, including a home page redesign of their marketing website.</p>
+                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Role: </span>I led the design process and HTML/SCSS development of their new home page:</p>
                 <ul class="portfolio-piece-list">
-                    <li class="portfolio-piece-list-item">Collaboration with Product, Development, and Clinical Operations</li>
-                    <li class="portfolio-piece-list-item">Low fidelity mockups: Paper/pencil sketches; Balsamiq wireframes</li>
-                    <li class="portfolio-piece-list-item">High fidelity mockups: Sketch and Adobe Illustrator mockups</li>
-                    <li class="portfolio-piece-list-item">User research &amp; testing of beta product</li>
-                    <li class="portfolio-piece-list-item">Clickable prototypes: Invision</li>
+                    <li class="portfolio-piece-list-item">Ideation meetings with Marketing, Sales, Product, and Development</li>
+                    <li class="portfolio-piece-list-item">Low fidelity mockups: Paper/pencil sketches; grayscale wireframes in Adobe Illustrator</li>
+                    <li class="portfolio-piece-list-item">High fidelity mockups: Adobe Illustrator mockups</li>
+                    <li class="portfolio-piece-list-item">HTML/SCSS prototype</li>
+                    <li class="portfolio-piece-list-item">Implementation of HTML/SCSS prototype into Wordpress</li>
                 </ul>
             </div>
         </div>
     </section>
 
-    <section class="portfolio-school-analytics">
+    <section class="portfolio-testive-landing-page">
         <div class="portfolio-piece-row">
             <div class="portfolio-piece-column">
-                <h2 class="portfolio-piece-header">Testive, Inc: School Analytics Product</h2>
-                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Overview: </span>Testive is a B2C education startup in Boston, MA. Their products include multiple web-based applications that help students and mentors prepare for the SAT/ACT.</p>
-                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Role: </span>As the primary UX/UI designer at Testive, I led the design process for a product called School Analytics. The product&rsquo;s user base included school teachers and guidance counselors who wanted a way to track their students&rsquo; progress who used the Testive app for SAT/ACT prep:</p>
+                <h2 class="portfolio-piece-header">Responsive Landing Page</h2>
+                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Overview: </span>Testive is an education startup company. As the primary UX/UI designer, I collaborated closely with the Marketing &amp; Sales team on a number of projects, including designing and building landing pages.</p>
+                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Role: </span>I designed and built a landing page intended to encourage students at specific schools to sign up for Testive:</p>
                 <ul class="portfolio-piece-list">
-                    <li class="portfolio-piece-list-item">Ideation meetings with Head of Product, Head of Engineering, and Director of School Partnerships</li>
+                    <li class="portfolio-piece-list-item">Ideation meetings with Marketing, Sales, Product, and the Director of School Partnerships</li>
                     <li class="portfolio-piece-list-item">Low fidelity mockups: Paper/pencil wireframes, whiteboard sketches</li>
                     <li class="portfolio-piece-list-item">High fidelity mockups: Adobe Illustrator mockups</li>
-                    <li class="portfolio-piece-list-item">HTML/SCSS development &amp; collaboration with development team</li>
+                    <li class="portfolio-piece-list-item">HTML/SCSS development and deployment</li>
                 </ul>
             </div>
             <div class="portfolio-piece-column">
                 <div class="portfolio-piece-icon"><a href="https://github.com/andrealeigh/testive_portfolio/raw/master/high_fidelity_mockups/school_analytics.pdf">
-                    <img class="portfolio-piece-icon-image" src="images/school-analytics-icon.png" alt="school anayltics icon" />
+                    <img class="portfolio-piece-icon-image" src="images/testive-marketing-icon.png" alt="testive landing page icon" />
                 </a></div>
             </div>
         </div>
     </section>
 
-    <section class="portfolio-testive-projects">
+    <section class="portfolio-testive-branding">
         <div class="portfolio-piece-row">
             <div class="portfolio-piece-column">
-                <button class="portfolio-piece-icon"><a href="#">
-                    <img class="portfolio-piece-icon-image" src="images/testive-marketing-icon.png" alt="testive marketing deliverables" />
+                <button class="portfolio-piece-icon"><a href="https://github.com/andrealeigh/testive_portfolio/raw/master/testive_color_guide.pdf">
+                    <img class="portfolio-piece-icon-image" src="images/testive-branding-icon.png" alt="testive branding icon" />
                 </a></button>
             </div>
             <div class="portfolio-piece-column">
-                <h2 class="portfolio-piece-header">Testive, Inc: Marketing Projects</h2>
-                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Overview: </span>Testive is a B2C education startup in Boston, MA. Their products include multiple web-based applications that help students and mentors prepare for the SAT/ACT.</p>
-                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Role: </span>As the primary UX/UI designer at Testive, I collaborated closely with the Marketing &amp; Sales team on a number of projects. I led the design process on a variety of marketing deliverables that aimed to convert potential customers into sales for Testive&rsquo;s product:</p>
-                <ul class="portfolio-piece-list">
-                    <li class="portfolio-piece-list-item">Wordpress marketing website: Designing &amp; coding new pages</li>
-                    <li class="portfolio-piece-list-item">Responsive landing pages: Designing &amp; coding</li>
-                    <li class="portfolio-piece-list-item">Style &amp; branding guidelines</li>
-                    <li class="portfolio-piece-list-item">Mentoring a marketing &amp; design intern</li>
-                    <li class="portfolio-piece-list-item">A/B testing strategy</li>
-                </ul>
+                <h2 class="portfolio-piece-header">Color Style Guide</h2>
+                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Overview: </span>Testive is an education startup company. As the primary UX/UI designer, I collaborated closely with the Marketing &amp; Sales team on a number of projects, including providing direction on Testive&rsquo;s evolving brand and visual style.</p>
+                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Role: </span>As part of an effort to standardize Testive&rsquo;s visual language, I created a color style guide for their app and marketing website.</p>
             </div>
         </div>
     </section>
