--- a/marketing.html
+++ b/marketing.html
@@ -14,7 +14,7 @@
 <body class="portfolio">
 
     <nav class="portfolio-nav">
-        <h1 class="portfolio-nav-name">Andrea Leigh Williamson</h1>
+        <h1><a class="portfolio-nav-name-link" href="index.html">Andrea Leigh Williamson</a></h1>
         <div class="portfolio-nav-links">
             <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="index.html">HOME</a>
             <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="portfolio.html">PORTFOLIO</a>
