Start of logos.html page

--- a/logos.html
+++ b/logos.html
@@ -24,7 +24,7 @@
     </nav>
 
     <section class="portfolio-intro">
-        <p class="portfolio-intro-blurb"><span class="portfolio-intro-blurb-emphasis">Portfolio:</span> Marketing deliverables for Testive. Inc.</p>
+        <p class="portfolio-intro-blurb"><span class="portfolio-intro-blurb-emphasis">Portfolio:</span> Graphic Design Projects</p>
     </section>
 
     <section class="portfolio-testive-home-page">
@@ -81,6 +81,27 @@
                 <h2 class="portfolio-piece-header">Color Style Guide</h2>
                 <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Overview: </span>Testive is an education startup company. As the primary UX/UI designer, I collaborated closely with the Marketing &amp; Sales team on a number of projects, including providing direction on Testive&rsquo;s evolving brand and visual style.</p>
                 <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Role: </span>As part of an effort to standardize Testive&rsquo;s visual language, I created a color style guide for their app and marketing website.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="portfolio-testive-landing-page">
+        <div class="portfolio-piece-row">
+            <div class="portfolio-piece-column">
+                <h2 class="portfolio-piece-header">Responsive Landing Page</h2>
+                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Overview: </span>Testive is an education startup company. As the primary UX/UI designer, I collaborated closely with the Marketing &amp; Sales team on a number of projects, including designing and building landing pages.</p>
+                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Role: </span>I designed and built a landing page intended to encourage students at specific schools to sign up for Testive:</p>
+                <ul class="portfolio-piece-list">
+                    <li class="portfolio-piece-list-item">Ideation meetings with Marketing, Sales, Product, and the Director of School Partnerships</li>
+                    <li class="portfolio-piece-list-item">Low fidelity mockups: Paper/pencil wireframes, whiteboard sketches</li>
+                    <li class="portfolio-piece-list-item">High fidelity mockups: Adobe Illustrator mockups</li>
+                    <li class="portfolio-piece-list-item">HTML/SCSS development and deployment</li>
+                </ul>
+            </div>
+            <div class="portfolio-piece-column">
+                <div class="portfolio-piece-icon"><a href="https://github.com/andrealeigh/testive_portfolio/raw/master/high_fidelity_mockups/school_analytics.pdf">
+                    <img class="portfolio-piece-icon-image" src="images/testive-marketing-icon.png" alt="testive landing page icon" />
+                </a></div>
             </div>
         </div>
     </section>
